image classification lora sample - warnings ignore

--- a/notebooks/03_peft_lora.ipynb
+++ b/notebooks/03_peft_lora.ipynb
@@ -20,20 +20,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0412a487-f8d8-4049-a017-4be8a50c98e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0c49e3eb-f1e1-429e-a00d-7de28cca7c5e",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "from transformers import AutoImageProcessor\n",
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "80866cae-78e6-4775-966c-bf82ad0b2ea6",
    "metadata": {
     "scrolled": true,
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2eff046d-dcbd-4f97-a8c1-38c5bec27646",
    "metadata": {},
    "outputs": [
@@ -95,7 +98,7 @@
        "})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "271903e6-f96c-4523-8894-cd55d86dc02f",
    "metadata": {},
    "outputs": [
@@ -116,7 +119,7 @@
        "{'image': <PIL.Image.Image image mode=RGB size=384x512>, 'label': 6}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f70eff86-a51f-4f2a-90ff-9eea5a745c1a",
    "metadata": {
     "tags": []
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b4b19150-b281-411a-b391-71e49dcd59fb",
    "metadata": {
     "tags": []
@@ -155,7 +158,7 @@
        "'baklava'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "86db7650-761d-493a-952f-2e4387a1c7ae",
    "metadata": {
     "tags": []
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "59e4c120-b562-4e86-a910-687aa20fb4ac",
    "metadata": {},
    "outputs": [],
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a5723049-bb10-4dae-a9f7-bdedde94a079",
    "metadata": {},
    "outputs": [],
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "87a9cdb7-1441-4ad9-b02b-b8787884d34b",
    "metadata": {},
    "outputs": [
@@ -262,32 +265,32 @@
       "text/plain": [
        "{'image': <PIL.Image.Image image mode=RGB size=384x512>,\n",
        " 'label': 6,\n",
-       " 'pixel_values': tensor([[[-0.7020, -0.7490, -0.7725,  ..., -0.9843, -0.9843, -0.9843],\n",
-       "          [-0.7961, -0.7569, -0.7647,  ..., -0.9922, -0.9843, -0.9843],\n",
-       "          [-0.7333, -0.7098, -0.7333,  ..., -0.9922, -0.9922, -0.9843],\n",
+       " 'pixel_values': tensor([[[-0.2863, -0.2863, -0.2471,  ..., -0.0588, -0.0118,  0.0275],\n",
+       "          [-0.2471, -0.1843, -0.0745,  ...,  0.0588,  0.0902,  0.0667],\n",
+       "          [-0.3255, -0.2471, -0.1451,  ...,  0.1529,  0.1765,  0.1373],\n",
        "          ...,\n",
-       "          [-0.1922, -0.2392, -0.2078,  ..., -0.1451, -0.1608, -0.1686],\n",
-       "          [-0.1529, -0.2000, -0.2000,  ..., -0.0824, -0.1137, -0.1451],\n",
-       "          [-0.2078, -0.2078, -0.1137,  ..., -0.2157, -0.1373, -0.0824]],\n",
+       "          [-0.2706, -0.2941, -0.3255,  ...,  0.0275,  0.1843,  0.1686],\n",
+       "          [-0.2941, -0.3333, -0.3176,  ..., -0.0118, -0.0667,  0.0980],\n",
+       "          [-0.3255, -0.3176, -0.3176,  ...,  0.1059, -0.0275, -0.0353]],\n",
        " \n",
-       "         [[-0.6627, -0.7176, -0.7412,  ..., -0.7647, -0.7804, -0.7804],\n",
-       "          [-0.7647, -0.7412, -0.7490,  ..., -0.7647, -0.7725, -0.7804],\n",
-       "          [-0.7098, -0.7020, -0.7255,  ..., -0.7569, -0.7647, -0.7725],\n",
+       "         [[-0.1843, -0.1843, -0.1451,  ...,  0.1059,  0.1529,  0.2000],\n",
+       "          [-0.1451, -0.0824,  0.0275,  ...,  0.2235,  0.2549,  0.2392],\n",
+       "          [-0.2235, -0.1451, -0.0431,  ...,  0.3176,  0.3412,  0.3098],\n",
        "          ...,\n",
-       "          [-0.2392, -0.2784, -0.2471,  ..., -0.2627, -0.2784, -0.2863],\n",
-       "          [-0.2000, -0.2471, -0.2392,  ..., -0.2000, -0.2314, -0.2627],\n",
-       "          [-0.2549, -0.2471, -0.1529,  ..., -0.3333, -0.2549, -0.2000]],\n",
+       "          [-0.3333, -0.3569, -0.3882,  ..., -0.0196,  0.1373,  0.1216],\n",
+       "          [-0.3490, -0.3882, -0.3725,  ..., -0.0588, -0.1137,  0.0431],\n",
+       "          [-0.3804, -0.3725, -0.3725,  ...,  0.0431, -0.0902, -0.0980]],\n",
        " \n",
-       "         [[-0.6549, -0.7255, -0.7490,  ..., -0.7804, -0.7882, -0.7882],\n",
-       "          [-0.7961, -0.7804, -0.7882,  ..., -0.7804, -0.7804, -0.7882],\n",
-       "          [-0.7725, -0.7569, -0.7882,  ..., -0.7725, -0.7804, -0.7882],\n",
+       "         [[-0.0431, -0.0353,  0.0039,  ...,  0.3176,  0.3647,  0.3961],\n",
+       "          [-0.0118,  0.0667,  0.1765,  ...,  0.4353,  0.4667,  0.4275],\n",
+       "          [-0.0902,  0.0039,  0.1059,  ...,  0.5294,  0.5529,  0.5059],\n",
        "          ...,\n",
-       "          [-0.4118, -0.4510, -0.4196,  ..., -0.4275, -0.4431, -0.4510],\n",
-       "          [-0.3725, -0.4196, -0.4118,  ..., -0.3647, -0.3961, -0.4275],\n",
-       "          [-0.4275, -0.4196, -0.3255,  ..., -0.4980, -0.4196, -0.3647]]])}"
+       "          [-0.4824, -0.5059, -0.5373,  ..., -0.2078, -0.0510, -0.0667],\n",
+       "          [-0.4980, -0.5373, -0.5216,  ..., -0.2471, -0.3020, -0.1373],\n",
+       "          [-0.5294, -0.5216, -0.5216,  ..., -0.1373, -0.2706, -0.2784]]])}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a2dad57b-7cd8-44e0-8f36-ccdcf7376b49",
    "metadata": {},
    "outputs": [],
@@ -319,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b155ed5f-03dc-4784-9817-e9534b2e355c",
    "metadata": {},
    "outputs": [
@@ -338,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c45814d9-d880-411c-abfc-c9da2ee90bd8",
    "metadata": {},
    "outputs": [
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "bc1667d2-b393-4398-90d4-f87377c590e3",
    "metadata": {},
    "outputs": [
@@ -400,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "322cfb43-b098-4dc0-8ef3-98a051476641",
    "metadata": {},
    "outputs": [],
@@ -418,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d8b610e1-aea5-47a0-b240-d689014c3e4b",
    "metadata": {},
    "outputs": [
@@ -430,7 +433,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=275x183>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b172eddb-2726-4eeb-8972-79ba1271884e",
    "metadata": {},
    "outputs": [],
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "1ebb4f5a-6290-4276-8625-35aafc0e8d83",
    "metadata": {},
    "outputs": [
@@ -463,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: gnocchi\n"
+      "Predicted class: lasagna\n"
      ]
     }
    ],
@@ -486,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "a5fc2065-4be5-4acd-b8a3-0b06de8dbef4",
    "metadata": {},
    "outputs": [],
@@ -497,19 +500,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "46baafd7-3003-4764-836d-5e415a094a84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/transformers/training_args.py:1525: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "args = TrainingArguments(\n",
     "    output_dir,\n",
@@ -530,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "b241e67e-3984-439d-866b-2ce19ca7677b",
    "metadata": {},
    "outputs": [
@@ -555,18 +549,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "c84e085e-10c6-4ca9-9deb-e94e850f8584",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -574,7 +560,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='90' max='90' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [90/90 42:27, Epoch 4/5]\n",
+       "      [90/90 41:50, Epoch 4/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -587,18 +573,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1.957700</td>\n",
-       "      <td>0.484346</td>\n",
+       "      <td>1.955000</td>\n",
+       "      <td>0.487615</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.655300</td>\n",
-       "      <td>0.380919</td>\n",
+       "      <td>0.655200</td>\n",
+       "      <td>0.377819</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.578100</td>\n",
-       "      <td>0.355284</td>\n",
+       "      <td>0.576400</td>\n",
+       "      <td>0.354015</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -611,40 +597,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/PIL/TiffImagePlugin.py:900: UserWarning: Truncated File Read\n",
-      "  warnings.warn(str(msg))\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/PIL/TiffImagePlugin.py:900: UserWarning: Truncated File Read\n",
-      "  warnings.warn(str(msg))\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/PIL/TiffImagePlugin.py:900: UserWarning: Truncated File Read\n",
-      "  warnings.warn(str(msg))\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/PIL/TiffImagePlugin.py:900: UserWarning: Truncated File Read\n",
-      "  warnings.warn(str(msg))\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/PIL/TiffImagePlugin.py:900: UserWarning: Truncated File Read\n",
-      "  warnings.warn(str(msg))\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
-      "/home1/irteam/miniconda3/envs/jhyoon-py310/lib/python3.10/site-packages/PIL/TiffImagePlugin.py:900: UserWarning: Truncated File Read\n",
-      "  warnings.warn(str(msg))\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=90, training_loss=0.8248855166965061, metrics={'train_runtime': 2582.6751, 'train_samples_per_second': 146.65, 'train_steps_per_second': 0.035, 'total_flos': 2.88061030750363e+19, 'train_loss': 0.8248855166965061, 'epoch': 4.864864864864865})"
+       "TrainOutput(global_step=90, training_loss=0.8241173479292128, metrics={'train_runtime': 2547.0129, 'train_samples_per_second': 148.704, 'train_steps_per_second': 0.035, 'total_flos': 2.88061030750363e+19, 'train_loss': 0.8241173479292128, 'epoch': 4.864864864864865})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "4bd19aea-0a79-406b-9c19-10290bf40bcb",
    "metadata": {},
    "outputs": [
